--- a/src/Landing.css
+++ b/src/Landing.css
@@ -1,3 +1,6 @@
+@import "tailwindcss";
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -44,4 +47,15 @@
 .button-space {
   margin-top: 16px;
   margin-bottom: 16px;
+}
+
+.heading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.heading-container h1 {
+  font-size: 2.5rem;
+  margin-bottom: 0.5rem;
 }
